# AOC2024

./: .gitignore  CMakeLists.txt
day01/: part1.cpp  part2.cpp
day02/: part1.cpp  part2.cpp
day03/: part1.cpp  part2.cpp
day04/: part1.cpp  part2.cpp
day05/: part1.cpp  part2.cpp
day06/: part1.cpp  part2.cpp
day07/: part1.cpp  part2.cpp
day08/: part1.cpp  part2.cpp
day09/: part1.cpp  part2.cpp
day10/: part1.cpp  part2.cpp
day11/: CMakeLists.txt  part1.cpp  part2.cpp
lib/: aoc_tools.hpp
